Resoloved radio button bug (Rex)
Resoloved radio button bug (Rex)

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <p><u>Interval between 3rd and 4th dose is at least 180 days</u></p>
                             <div class="radio_lines">
                                 <input id="b" name="covid_cover" type="radio">
-                                <label for="a">Recovered persons aged 18 years or above (at least 180 days after recover)</label>
+                                <label for="b">Recovered persons aged 18 years or above (at least 180 days after recover)</label>
                             </div>
                         </div>
                     </div>
