Resolve footer display problem (Rex)
Footer is not displayed in center

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </form>
 
         <footer>
-            <p>Code by CHAN Cheuk Man, Rex</p>
+            <center><p>Code by CHAN Cheuk Man, Rex</p></center>
         </footer>
     </body>
 </html>
