--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>COVID-19 Vaccination Programme - Booking System</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -190,6 +193,7 @@
                     </div>
                 </div>
             </div>
-        </form>
+        </form>
+
     </body>
 </html>
