Correct wrong word 'summit' (Rex)
Resolve submit input

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                     <!-- Row 10 -->
                     <div id="form_last_row" class="row">
-                        <input type="submit" id="summit" name="summit" value="Summit" />
+                        <input type="submit" id="submit" name="submit" value="Submit" />
                     </div>
                 </div>
             </div>
