--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
                             <select id="day" class="dropdown" name="day">
                                 <option disabled selected>Day</option>
                                 <option value="1">1st</option>
+                                <option value="2">2nd</option>
+                                <option value="3">3rd</option>
+                                <option value="4">4th</option>
+                                <option value="5">5th</option>
+                                <option value="6">6th</option>
+                                <option value="7">7th</option>
+                                <option value="8">8th</option>
+                                <option value="9">9th</option>
+                                <option value="10">10th</option>
                                 <option value="31">31th</option>
                             </select>
                             <select id="month" class="dropdown" name="month" required>
