Add days options in select (Rex)
Add days options in select (Rex)

--- a/index.html
+++ b/index.html
@@ -85,6 +85,26 @@
                                 <option value="8">8th</option>
                                 <option value="9">9th</option>
                                 <option value="10">10th</option>
+                                <option value="11">11th</option>
+                                <option value="12">12th</option>
+                                <option value="13">13th</option>
+                                <option value="14">14th</option>
+                                <option value="15">15th</option>
+                                <option value="16">16th</option>
+                                <option value="17">17th</option>
+                                <option value="18">18th</option>
+                                <option value="19">19th</option>
+                                <option value="20">20th</option>
+                                <option value="21">21th</option>
+                                <option value="22">22th</option>
+                                <option value="23">23th</option>
+                                <option value="24">24th</option>
+                                <option value="25">25th</option>
+                                <option value="26">26th</option>
+                                <option value="27">27th</option>
+                                <option value="28">28th</option>
+                                <option value="29">29th</option>
+                                <option value="30">30th</option>
                                 <option value="31">31th</option>
                             </select>
                             <select id="month" class="dropdown" name="month" required>
