--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <option value="7">July</option>
                                 <option value="8">August</option>
                                 <option value="9">September</option>
-                                <option value="10">Obtober</option>
+                                <option value="10">October</option>
                                 <option value="11">November</option>
                                 <option value="12">December</option>
                                 <option value="0">Not Applicable</option>
@@ -306,7 +306,7 @@
                                 <option value="7">July</option>
                                 <option value="8">August</option>
                                 <option value="9">September</option>
-                                <option value="10">Obtober</option>
+                                <option value="10">October</option>
                                 <option value="11">November</option>
                                 <option value="12">December</option>
                             </select>
