--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                 <option value="1982">1982</option>
                                 <option value="1981">1981</option>
                                 <option value="1980">1980</option>
-                                <option value="1979">1979/option>
+                                <option value="1979">1979</option>
                                 <option value="1978">1978</option>
                                 <option value="1977">1977</option>
                                 <option value="1976">1976</option>
