resolve 1917 </option> (Rex)
resolve 1917 </option> (Rex)

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 <option value="1920">1920</option>
                                 <option value="1919">1919</option>
                                 <option value="1918">1918</option>
-                                <option value="1917">1917/option>
+                                <option value="1917">1917</option>
                                 <option value="1916">1916</option>
                                 <option value="1915">1915</option>
                                 <option value="1914">1914</option>
